fix:citizens searcg list link fixed, image box need fixed aspect 5/7 according to figma, menu jump fixed, unoptimezed attr  for next Image, hemisphereLight added to fbx, selected menu now auto scroll vertically on selected tab in single level

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -85,7 +85,7 @@
       
         .grid-forth {
           grid-column: 2 / 4; /* Span the second and third columns */
-          grid-row: 1 / span 3;
+          grid-row: 1 / span 4;
         }
       }
     /* .grid-first {
